working version with return links added back

--- a/fs/html/form.html
+++ b/fs/html/form.html
@@ -22,7 +22,8 @@ pre { background: #eee; padding: 10px; border-radius: 5px; overflow: auto }
 <body>
 	<form action="?upload" method="post" enctype="multipart/form-data">
 		<fieldset>
-			<legend>File Upload</legend>
+			<legend>File Upload <!--current_directory--></legend>
+			<br>
 			<div>
 				<input type="file" id="fileselect" name="fileselect[]" multiple="multiple" />
 			</div>
