re-binaryized html

--- a/fs/html/form.html
+++ b/fs/html/form.html
@@ -31,6 +31,8 @@ pre { background: #eee; padding: 10px; border-radius: 5px; overflow: auto }
 			<div id="submitbutton">
 				<button type="submit"><b>Upload Files</b></button>
 			</div>
+			<br>
+			<a href=".">return to directory</a>
 		</fieldset>
 	</form>
 
